k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node-deployment
  namespace: ns-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: ambiente
                    operator: in
                    values:
                      - dev
      containers:
      - name: api-node
        image: api-node-exercicio
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
